<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nz.uict.a2037689.tuckbox.MainActivity"
    android:background="@color/mainBackground"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="148dp"
        android:layout_height="124dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tuckbox"
        android:layout_gravity="center_horizontal"/>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@color/inputText">

        <EditText
            android:id="@+id/signInEditUsername"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/inputTextTint"
            android:hint="@string/username"
            android:inputType="text|textEmailAddress"
            android:textColor="@color/inputText"
            android:layout_gravity="center_horizontal"/>
    </android.support.design.widget.TextInputLayout>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@color/inputText">

        <EditText
            android:id="@+id/signInEditPassword"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/inputTextTint"
            android:hint="@string/password"
            android:inputType="text|textPassword"
            android:textColor="@color/inputText"
        android:layout_gravity="center_horizontal" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnMainSignUp"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/signupbuttons"
        android:backgroundTint="@color/mainButtonBackground"
        android:textColor="@color/mainButtonText"
        android:onClick="SignUpMainClick"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnMainSignIn"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:text="@string/signin"
        android:backgroundTint="@color/mainButtonBackground"
        android:textColor="@color/mainButtonText"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_gravity="center_horizontal"
        android:onClick="SignInMainClick"

        />







</LinearLayout>
